WIP: Update with devfest sudeste data

--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -8,7 +8,7 @@
                 <form action="{{site.subscribeAction}}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div class="mc-field-group col-lg-9 col-sm-9 col-xs-12">
                         <i class="email bordered required waves-effect waves-light waves-input-wrapper">
-                            <input type="email" value="" name="EMAIL" class="waves-button-input" id="mce-EMAIL" placeholder="your@email.com" autocomplete="off">
+                            <input type="email" value="" name="EMAIL" class="waves-button-input" id="mce-EMAIL" placeholder="email" autocomplete="off">
                         </i>
                     </div>
                     <div id="mce-responses" class="clear">
@@ -21,7 +21,7 @@
                     </div>
                     <div class="mc-submit-group clear col-lg-3 col-sm-3 col-xs-12">
                         <i class="button bordered required waves-effect waves-light waves-input-wrapper">
-						  <input type="submit" class="waves-button-input" value="Submit" name="subscribe" id="mc-embedded-subscribe">
+						  <input type="submit" class="waves-button-input" value="Cadastrar" name="subscribe" id="mc-embedded-subscribe">
                         </i>
                     </div>
                 </form>
