--- a/_includes/find-way.html
+++ b/_includes/find-way.html
@@ -1,11 +1,11 @@
 <!-- Begin Find Way-->
 <section id="find-way" class="find-way">    
     <div id="canvas-map" class="canvas-map"></div>
-    <div class="content-wrapper text-left">
+    <div class="content-wrapper text-right">
         <h3 class="animated hiding" data-animation="fadeInUp" data-delay="0">{{ site.findWayTitle }}</h3>
         <div class="map-card col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="map-search">
-                <input type="text" id="location-input" class="location-input" name="location-input" data-input-value="Your location" placeholder="Your location" autocomplete="off">
+                <input type="text" id="location-input" class="location-input" name="location-input" data-input-value="Onde você está?" placeholder="Onde você está?" autocomplete="off">
                 <svg id="direction-locate" class="icon icon-geolocation" viewBox="0 0 30 32">
                     <use xlink:href="{{ site.baseurl }}/img/sprites/sprites.svg#icon-geolocation"></use>
                 </svg>
