--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -18,6 +18,8 @@
                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                     <div style="position: absolute; left: -5000px;">
                         <input type="text" name="b_54a5ee254093d994f8fe9af77_85ce972c0f" tabindex="-1" value="">
+                        <input type="hidden" name="u" value="54a5ee254093d994f8fe9af77">
+			<input type="hidden" name="id" value="85ce972c0f">
                     </div>
                     <div class="mc-submit-group clear col-lg-3 col-sm-3 col-xs-12">
                         <i class="button bordered required waves-effect waves-light waves-input-wrapper">
