--- a/_sass/partials/_hero.scss
+++ b/_sass/partials/_hero.scss
@@ -7,6 +7,7 @@
         top: 50%;
         margin: 0;
         left: 0;
+        text-shadow: rgba(0, 0, 0, 0.35) 2px 2px;
         transform: translateY(-60%);
         @media (max-width: 767px) {
             margin: 0;
