--- a/_sass/partials/_hero.scss
+++ b/_sass/partials/_hero.scss
@@ -7,7 +7,8 @@
         top: 50%;
         margin: 0;
         left: 0;
-        text-shadow: rgba(0, 0, 0, 0.35) 2px 2px;
+        color: #333;
+        text-shadow: rgba(0, 0, 0, 0.35) 1px 1px;
         transform: translateY(-60%);
         @media (max-width: 767px) {
             margin: 0;
@@ -15,7 +16,7 @@
         }
         p {
             font-size: $base-font-size * 2;
-            font-weight: $light;
+            font-weight: $regular;
             margin-bottom: 15px;
         }
         .btn {
